2003-06-16  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/shimbun.el: Changes to consider `coding-system' slot of
	SHIMBUN class.
	(shimbun-fetch-url): New function.
	(shimbun-make-mime-article, shimbun-headers, shimbun-article):
	Call `shimbun-fetch-url' instead of `shimbun-retrieve-url'.

	* shimbun/sb-w3m-dev.el (shimbun-get-headers, shimbun-article):
	Removed.

	* shimbun/shimbun.el: Changes to add a copyright notice to every
	article.
	(shimbun-footer): New method.
	(shimbun-japanese-newspaper): New base class.
	(shimbun-make-html-contents): Insert a footer generated by
	`shimbun-footer'.
	(shimbun-header-insert-and-buffer-string): Ditto.

	* shimbun/sb-yomiuri.el (shimbun-yomiuri): Make it inherit
	`shimbun-japanese-newspaper'.
	(shimbun-server-name, shimbun-current-group-name): New methods.
	(shimbun-from-address): Use the above new methods.

	* shimbun/sb-sponichi.el (toplevel): Make this module independent
	from `sb-text.el'
	(shimbun-sponichi): Likewise; Make it inherit
	`shimbun-japanese-newspaper'.
	(shimbun-sponichi-groups): Removed, and its information is moved
	to `shimbun-sponichi-group-table'.
	(shimbun-sponichi-group-table): New variable.
	(shimbun-sponichi-server-name): Ditto.
	(shimbun-groups, shimbun-current-group-name): New method.
	(shimbun-from-address): Ditto.

	* shimbun/sb-nikkei.el (toplevel): Make this module independent
	from `sb-text.el'
	(shimbun-nikkei): Likewise; Make it inherit
	`shimbun-japanese-newspaper'.
	(shimbun-nikkei-groups): Removed, and its information is moved to
	`shimbun-nikkei-group-table'.
	(shimbun-nikkei-group-table): New variable.
	(shimbun-nikkei-server-name): Ditto.
	(shimbun-groups, shimbun-current-group-name): New method.

	* shimbun/sb-nikkansports.el (toplevel): Make this module
	independent from `sb-text.el'
	(shimbun-nikkansports): Likewise; Make it inherit
	`shimbun-japanese-newspaper'.

	* shimbun/sb-mainichi.el (toplevel): Make this module independent
	from `sb-text.el'